--- a/compiLiasse_Desktop/MainWindow.xaml
+++ b/compiLiasse_Desktop/MainWindow.xaml
@@ -5,13 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:compiLiasse_Desktop"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid x:Name="GrdPrincipal">
-        <WebBrowser Margin="45,110,290,44" Source="C:\"/>
-        <TextBlock x:Name="TxBoMessage" HorizontalAlignment="Left" Margin="23,13,0,0" Text="Select a message option and click display" TextWrapping="Wrap" VerticalAlignment="Top"/>
-        <RadioButton x:Name="RdBtHello" Content="Hello" HorizontalAlignment="Left" Margin="452,21,0,0" VerticalAlignment="Top" IsChecked="True"/>
-        <Button x:Name="BtnDisplay" Content="Display" HorizontalAlignment="Left" Margin="708,14,0,0" VerticalAlignment="Top" Click="BtnDisplay_Click"/>
-        <RadioButton x:Name="RdBtGoodBye" Content="Goodbye" Margin="541,22,192,397"/>
+        Title="compiLiasse_desktop" Height="450" Width="800">
+    <Grid x:Name="GrdPrincipal" Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
 
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Label Grid.Column="0" Content="compiLiasse_desktop"/>
+        <ListBox Grid.Row="1" x:Name="lstNames" />
+        <StackPanel Grid.Row="1" Grid.Column="1" Margin="5,0,0,0">
+            <TextBox x:Name="txtName" />
+            <Button x:Name="BtnAjouterNom" Content="Ajouter Nom" Click="BtnAjouterNom_Click"/>
+        </StackPanel>
     </Grid>
 </Window>
