--- a/compiLiasse_Desktop/App.xaml
+++ b/compiLiasse_Desktop/App.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:compiLiasse_Desktop"
              StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+	<Application.Resources>
+		<Style TargetType="{x:Type GridViewColumnHeader}">
+			<Setter Property="HorizontalContentAlignment" Value="Left" />
+		</Style>
+	</Application.Resources>
 </Application>
