--- a/compiLiasse_Desktop/MainWindow.xaml
+++ b/compiLiasse_Desktop/MainWindow.xaml
@@ -1,10 +1,10 @@
 ﻿<Window x:Class="compiLiasse_Desktop.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        Title="compiLiasse_desktop" Height="450" Width="800" Loaded="Window_Loaded">
+		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		mc:Ignorable="d"
+		Title="compiLiasse_desktop" Height="450" Width="800" Loaded="Window_Loaded">
 	
 	<!--Mise en page => Grid-->
 	<Grid x:Name="GrdPrincipal" Margin="10">
@@ -20,8 +20,12 @@
 
 		<!--Contenu de la colonne de gauche-->
 		<Label Grid.Column="0" Content="compiLiasse_desktop"/>
-		<ListView x:Name="lstNames" Margin="0,0,0,0" Grid.Row="1" MouseDoubleClick="lstNames_MouseDoubleClick" ItemsSource="{Binding ObsCollectionFilesFromJson_Wpf}" SelectedItem="{Binding SelectedPDF}" >
-				  <!--DataContext="{Binding FilePdf}" ItemsSource="{Binding}" SelectedItem="{Binding SelectedItem, Mode=TwoWay}"-->
+		<ListView x:Name="lstNames" 
+				  Margin="0,0,0,0" 
+				  Grid.Row="1" 
+				  MouseDoubleClick="lstNames_MouseDoubleClick" 
+				  ItemsSource="{Binding ObsCollectionFilesFromJson_Wpf}" 
+				  SelectedItem="{Binding SelectedPDF}" >
 			<ListView.View>
 				<GridView>
 					<GridViewColumn Header="Id" Width="20" DisplayMemberBinding="{Binding Id}" />
