--- a/compiLiasse_Desktop/Views/MainWindow.xaml
+++ b/compiLiasse_Desktop/Views/MainWindow.xaml
@@ -1,13 +1,16 @@
-﻿<Window x:Class="compiLiasse_Desktop.MainWindow"
+﻿<Window x:Class="compiLiasse_Desktop.Views.MainWindow"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		mc:Ignorable="d"
-		Title="compiLiasse_desktop" Height="450" Width="800" 
+		Height="450" Width="800"
+		WindowStartupLocation="CenterScreen" 
+		WindowStyle="SingleBorderWindow"
+		ResizeMode="CanMinimize" 
+		Title="{Binding MWTitle}"
 		Loaded="Window_Loaded"
-		WindowStyle="None"
-		ResizeMode="NoResize">
+		Closed="Window_Closed">
 	
 	<!--Mise en page => Grid-->
 	<Grid x:Name="GrdPrincipal" Margin="10">
@@ -22,14 +25,13 @@
 		</Grid.ColumnDefinitions>
 
 		<!--Contenu de la colonne de gauche-->
-		
 		<StackPanel Margin="0" Grid.Column="0" Grid.Row="0">
-			<ComboBox x:Name="cboxConfigs" SelectionChanged="cboxConfigs_SelectionChanged" />
+			<ComboBox x:Name="cboxConfigs" SelectionChanged="CboxConfigs_SelectionChanged" />
 
 			<WrapPanel Margin="15" HorizontalAlignment="Center">
-				<Button Name="btnPrevious" Click="btnPrevious_Click" Width="55">Previous</Button>
-				<Button Name="btnNext" Click="btnNext_Click" Margin="5,0" Width="55">Next</Button>
-				<Button Name="btnBlue" Click="btnBlue_Click" Width="55">Blue</Button>
+				<Button Name="btnPrevious" Click="BtnPrevious_Click" Width="55">Previous</Button>
+				<Button Name="btnNext" Click="BtnNext_Click" Margin="5,0" Width="55">Next</Button>
+				<Button Name="btnBlue" Click="BtnBlue_Click" Width="55">Blue</Button>
 			</WrapPanel>
 		</StackPanel>
 		
@@ -57,11 +59,11 @@
 		<Label Grid.Column="1" Content="compiLiasse_desktop"/>
 		
 		<StackPanel Grid.Row="1" Grid.Column="1" Margin="5,0,0,0">
-			<Button x:Name="btnAddFile" Margin="0,5,0,0" Click="btnAddFile_Click" Content="Ajouter"/>
-			<Button x:Name="btnChangeFile" Click="btnChangeFile_Click" Margin="0,5" Content="Modifier"/>
-			<Button x:Name="btnDeleteFile" Click="btnDeleteFile_Click" Content="Supprimer"/>
-			<Button x:Name="btnSaveList" Content="Sauver la Liste" Margin="0,5,0,0" Click="btnSaveList_Click"/>
-			<Button x:Name="btnSpratchList" Content="Remplacer la Liste" Margin="0,5,0,0" Click="btnSpratchList_Click"/>
+			<Button x:Name="btnCreateFile" Margin="0,5,0,0" Click="BtnCreateFile_Click" Content="Ajouter"/>
+			<Button x:Name="btnChangeFile" Click="BtnChangeFile_Click" Margin="0,5" Content="Modifier"/>
+			<Button x:Name="btnDeleteFile" Click="BtnDeleteFile_Click" Content="Supprimer"/>
+			<Button x:Name="btnSaveList" Content="Sauver la Liste" Margin="0,5,0,0" Click="BtnSaveList_Click"/>
+			<Button x:Name="btnSpratchList" Content="Remplacer la Liste" Margin="0,5,0,0" Click="BtnSpratchList_Click"/>
 		</StackPanel>
 	</Grid>
 </Window>
