--- a/compiLiasse_Desktop/App.xaml
+++ b/compiLiasse_Desktop/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:compiLiasse_Desktop"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Views/MainWindow.xaml">
 	<Application.Resources>
 		<Style TargetType="{x:Type GridViewColumnHeader}">
 			<Setter Property="HorizontalContentAlignment" Value="Left" />
